# hall

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: CI.yml  publish-release.yml  pull-request.yml
contributing/: index.html
docs/: contributing.md  index.md  install.md  roadmap.md  usage.md
hall/: __init__.py  _core.py  _event.py  _types.py  analysis.py  backend.py  continuous.py  discrete.py  event.py  numbers.py  stats.py  typing.py
install/: index.html
roadmap/: index.html
scripts/: poetry.py
search/: search_index.json
stylesheets/: theme.css
tests/: test_continuous.py  test_discrete.py
usage/: index.html
