[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Poetry
[tool.poetry]
name = "hall"
version = "0.1.3"
description = "Hall - Probability theory using pythonic and (almost) mathematical notation."
authors = ["Joren Hammudoglu <jhammudoglu@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    "License :: OSI Approved :: BSD License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",

    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",

    "Typing :: Typed",

    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
packages = [
    { include = "hall" },
]

[tool.poetry.urls]
homepage = "https://pypi.org/project/hall/"
documentation = "https://jorenham.github.io/hall/"
repository = "https://github.com/jorenham/hall"
"Bug Tracker" = "https://github.com/jorenham/hall/issues"

[tool.poetry.dependencies]
python = "^3.8"
mpmath = "^1.2"
gmpy2 = {version = "^2.0.8", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
coverage = {extras = ["toml"], version = "^5.5"}

mypy = "^0.910"
black = "^21.6b0"
isort = "^5.9.2"
mkdocs = "^1.2.1"
mkdocs-include-markdown-plugin = "^3.2.0"

[tool.poetry.scripts]
reformat = "scripts.poetry:reformat"
test = "scripts.poetry:test"
docs = "scripts.poetry:docs"


# pytest
[tool.pytest]
testpaths = ["tests"]
norecursedirs = [
    "__pycache__",
    ".git",
    ".pytest_cache",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "examples",
]
addopts = "-vx --cov --cov-report term-missing --cov-fail-under=90"


# Coverage
[tool.coverage.run]
source = ["nbqa"]

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "return NotImplemented",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
ignore_errors = true
omit = ["tests/*"]


# MyPy
[tool.mypy]
python_version = "3.8"
warn_return_any = true
files = [
    "hall/*.py"
]

[[tool.mypy.overrides]]
module = "mpmath"
ignore_missing_imports = true


# Black
[tool.black]
line-length = 80


# isort
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 80
lines_after_imports = 2
